[package]
name = "fuzzybox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.7", features = ["derive", "env"] }
# openai-rust = "1.5.2"
openai-rust = { path = "../openai-rust" }
tokio = { version = "1.38.0", features = ["full"] }
